--- a/front-end/mall4m/components/login/index.wxss
+++ b/front-end/mall4m/components/login/index.wxss
@@ -1,38 +1,45 @@
 .btn-add-box-popup {
-  width: 600rpx;
+    width: 550rpx;
 }
+
 .t-box {
-  margin-top: 32rpx;
-  height: 100rpx;
-  position: relative;
+    margin-top: 20rpx;
+    height: 100rpx;
+    position: relative;
 }
+
 .t {
-  line-height: 100rpx;
-  font-size: 38rpx;
-  text-align: center;
+    line-height: 100rpx;
+    font-size: 34rpx;
+    text-align: center;
 }
+
 .jump {
-  position: absolute;
-  top: 0;
-  right: 48rpx;
-  line-height: 100rpx;
-  font-size: 32rpx;
-  color: #bbb;
+    position: absolute;
+    top: 0;
+    right: 48rpx;
+    line-height: 100rpx;
+    font-size: 32rpx;
+    color: #bbb;
 }
+
 .avatar {
-  margin-top: 32rpx;
-  width: 240rpx;
-  height: 240rpx;
-  padding: 0;
-  border-radius: 50%;
+    margin-top: 20rpx;
+    width: 240rpx;
+    height: 240rpx;
+    padding: 0;
+    border-radius: 20rpx;
 }
+
 .avatar-img {
-  width: 240rpx;
-  height: 240rpx;
+    width: 240rpx;
+    height: 240rpx;
 }
+
 .nick-box {
-  padding: 32rpx 0;
+    padding: 20rpx 50rpx;
 }
+
 .btn-group {
-  padding: 32rpx;
+    padding: 20rpx 50rpx;
 }
