--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxss
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxss
@@ -117,7 +117,7 @@
 .consumeCost {
   text-align: right;
   color: rgb(139, 138, 138);
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 12px;
 }
 
