--- a/front-end/mall4m/pages/admin/pages/index/index.wxml
+++ b/front-end/mall4m/pages/admin/pages/index/index.wxml
@@ -37,6 +37,7 @@
         </view>
     </view>
 
+    <!-- 对话框 组件-->
     <view wx:if="{{showOrderDialog}}" class="mask" >
         <view class="orderDialog">
         <view bindtap="hideDialog" class="close"></view>
@@ -59,37 +60,6 @@
         </view>
     </view>
 
-    <view wx:if="{{demo}}" class="mask">
-        <view class="orderDialog">
-            <view class="flex">
-                <label class="labelName">原因</label>
-                <view style="position: relative;">
-                    <view bindtap="showReasonSel" style="border:solid 1px #eee; line-height: 40px; padding-left:3vw; font-size: 14px; width:60vw; height: 40px;border-radius: 2vw; margin-left: 3vw;">
-                        {{selectedReason==-1?'请选择':selectedReason}}
-                    </view>
-                    <view wx:if="{{showReasonSel}}" style="height: 30vw; width:60vw; overflow: auto; position: absolute; left:3vw; top:40px; border:solid 1px #eee; border-radius: 2vw;">
-                        <view bindtap="selectReason" data-value="{{item}}" wx:for="{{reasonArr}}" wx:key="item" style="height: 30px; line-height: 30px; padding-left: 3vw; font-size: 14px;">
-                            {{item}}
-                        </view>
-                    </view>
-                </view>
-            </view>
-            <view class="flex" style="margin-top: 5vw;">
-                <label class="labelName">原因</label>
-                <view style="position: relative;">
-
-                </view>
-            </view>
-            <view class="aroundFlex" style="position: absolute; left:0; bottom:5vw; width:100vw; height: 20vw;">
-                <view bindtap="taggleShowOrderDialog" class="btnCancel centerFlex" style="background:#999; width:35vw; text-align: center;color:#fff; height: 10vw; border-radius: 5vw;">
-                    取消
-                </view>
-                <view class="btnSure centerFlex" style="background:#f38d08; width:35vw; text-align: center;color:#fff; height: 10vw; border-radius: 5vw;">
-                    提交
-                </view>
-            </view>
-        </view>
-    </view>
     <!-- <view class="btn-area" id="buttonContainer">
     <button type="primary" bindtap="viewOrderByQRCode">扫码管理订单</button>
     <button type="primary" bindtap="viewOrder">测试进入某个订单</button>
